<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name">Sunshine With Database 1</string>
    <string name="action_settings">Settings</string>

    <!--    <string-array name="foreCastArray">
            <item>Monday</item>
            <item>Tuesday</item>
            <item>Wednesday</item>
            <item>Thursday</item>
            <item>Friday</item>
            <item>Saturday</item>
            <item>Sunday</item>
        </string-array>   -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_refresh">Refresh</string>

    <!-- Location Setting -->
    <string name="pref_location_label">Location</string>

    <string name="pref_location_key" translatable="false">location</string>

    <string name="pref_location_default" translatable="false">560085</string>

    <!-- Temperature Setting -->
    <string name="pref_units_label">Temperature Units</string>

    <string name="pref_units_key" translatable="false">temperature</string>

    <string name="pref_units_metric" translatable="false">Metric</string>
    <string name="pref_units_imperial" translatable="false">Imperial</string>

    <!-- Example 1 Setting -->
    <string name="pref_ex1_label">Example1</string>
    <string name="pref_ex1_key" translatable="false">example1</string>
    <string name="pref_ex1_default" translatable="false">default</string>

    <!-- adding the map menu option -->
    <string name="action_map">Map Location</string>

    <!-- adding the share action provider -->
    <string name="action_share">Share</string>

    <!-- Language-specific constants -->
    <string name="today">Today</string>

    <!-- For labelling tomorrow's forecast [CHAR LIMIT=15] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format [CHAR LIMIT=NONE] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5 -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>
    <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>


    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.ravitheja.sunshinewithdatabase1.com</string>
    <string name="content_authority">com.ravitheja.sunshinewithdatabase1</string>


    <!-- Notification Format -->
        <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g></string>

        <!-- Strings related to Notification preference -->
        <string name="pref_last_notification">last_notification</string>

    <!-- Strings related to Notification Enabled preference -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Weather Notifications</string>
    <string name="pref_enable_notifications_true">Enabled</string>
    <string name="pref_enable_notifications_false">Not Enabled</string>
    <string name="pref_enable_notifications_default" translatable="false">true</string>

</resources>
