<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.ravitheja.sunshine.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/action_share"
        app:showAsAction="always"
        android:actionProviderClass="android.widget.ShareActionProvider"/>

    <item
        android:id="@+id/action_map"
        app:showAsAction="never"
        android:title="@string/action_map"
        android:orderInCategory="1000"/>

</menu>
